--- a/popup/render.css
+++ b/popup/render.css
@@ -1,23 +1,53 @@
-html,
-body {
-  overflow-x: hidden;
-  width: auto;
-  min-width: 350px;
-  max-width: 500px;
+img,
+embed,
+iframe,
+object,
+audio,
+video {
+  height: auto;
+  max-width: 100%;
+}
+
+img[width],
+img[height] {
+  max-width: none;
 }
 
 .hidden {
   display: none;
 }
 
-.center {
-  margin: 0.5em auto;
+.box-shadow {
+  box-shadow: 0 4px 16px rgba(12, 12, 13, 0.1);
+  transition: box-shadow 0.25s ease-in-out;
 }
 
-#qrcode-placeholder {
-  margin: 1em;
+.box-shadow:hover {
+  box-shadow: 0 4px 16px rgba(12, 12, 13, 0.6);
 }
 
-#qrcode-placeholder:hover {
-  background-color: rgba(255, 255, 255, 0.5);
+.panel-section-header > .image-section-header {
+  margin: 0 auto;
+}
+
+.panel-section-header.no-border-bottom {
+  border-bottom: 0;
+}
+
+.panel-formElements-item--samewidth {
+  justify-content: flex-end;
+}
+
+.panel-formElements-item--samewidth > label {
+  flex: 1;
+  text-align: left;
+}
+
+.panel-formElements-item--samewidth > input,
+.panel-formElements-item--samewidth > select {
+  flex: 2;
+}
+
+.browser-style.panel-formElements-item > textarea {
+  width: 100%;
 }
